# MGFusion

./: .gitignore  LICENSE  README.md
SurfReg/: CMakeLists.txt  ReadMe.md  SurfReg.cpp  ThreadMutexObject.h  a.sh  hausdorff.cc  nerf.py  nerf.sh
SurfReg/emd/: CMakeLists.txt  emd_poses.cpp
